# cs224u

./: .gitignore  compgen.py  cs224u-openqa-bakeoff-entry.json  cs224u-recogs-bakeoff-entry.tsv  cs224u-sentiment-bakeoff-entry.csv  dynascoring.ipynb  env.yml  evaluation_methods.ipynb  evaluation_metrics.ipynb  feature_attribution.ipynb  finetuning.ipynb  hw_openqa.ipynb  hw_openqa_mgb.ipynb  hw_openqa_scratch.py  hw_recogs.ipynb  hw_recogs_mgb.ipynb  hw_recogs_train.py  hw_sentiment.ipynb  hw_sentiment_just_sub.ipynb  hw_sentiment_train.py  iit.py  iit_equality.ipynb  np_autoencoder.py  np_glove.py  np_model_base.py  np_rnn_classifier.py  np_sgd_classifier.py  np_shallow_neural_classifier.py  pyproject.toml  recogs_bootstrap.json  recogs_model_bootstrap_random.json  requirements.txt  setup.ipynb  sst.py  sst_01_overview.ipynb  sst_02_hand_built_features.ipynb  sst_03_neural_networks.ipynb  torch_autoencoder.py  torch_deep_neural_classifier.py  torch_deep_neural_classifier_iit.py  (+13 more)
custom_models/sentiment/: bert_classifier.py  mixture_of_experts.py
notes/: 1_1.txt
project/: notes_intro_call.txt
reading/: alpaca.html
scratch/: dataset_playground.ipynb  dspy_react.ipynb
test/: test_autoencoders.py  test_compgen.py  test_glove.py  test_np_model_gradients.py  test_rnn_classifiers.py  test_sgd_classifier.py  test_shallow_neural_classifiers.py  test_sst.py  test_torch_model_base.py  test_utils.py  test_vsm.py
test_custom_modules/: scratch.ipynb  test_mixtures.py
